SERVER-16278: Race between shutdown and fsync flush with WiredTiger